--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.92",
+    "@types/ws": "^8.18.1",
     "pino-pretty": "^13.0.0",
     "tsx": "^4.7.0",
     "typescript": "^5.4.0"
@@ -18,6 +19,7 @@
   "packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af",
   "dependencies": {
     "discord.js": "^14.19.3",
-    "pino": "^9.6.0"
+    "pino": "^9.6.0",
+    "ws": "^8.18.2"
   }
 }
