--- a/package.json
+++ b/package.json
@@ -6,20 +6,35 @@
   "scripts": {
     "dev": "tsx watch --env-file=.env src/index.ts | pino-pretty",
     "build": "swc src -d dist",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "format": "prettier --write \"src/**/*.ts\""
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.26.0",
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.92",
     "@types/ws": "^8.18.1",
+    "eslint": "^9.26.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.3.1",
+    "globals": "^16.0.0",
     "pino-pretty": "^13.0.0",
+    "prettier": "^3.5.3",
     "tsx": "^4.7.0",
-    "typescript": "^5.4.0"
+    "typescript": "^5.4.0",
+    "typescript-eslint": "^8.31.1"
   },
   "packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af",
   "dependencies": {
     "discord.js": "^14.19.3",
     "pino": "^9.6.0",
     "ws": "^8.18.2"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@swc/core",
+      "esbuild"
+    ]
   }
 }
