feat: add Lavalink node configuration and player management, update API interactions

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ DISCORD_OWNERS=400385060311793674,616410427794128909,332581129704177664
 DISCORD_APPLICATION_ID=541357756175876097
 DISCORD_TEST_GUILD_ID=595780012486164500
 
+# lavalink
+LAVALINK_NODES=[{"name":"Localhost","host":"localhost","port":2333,"password":"youshallnotpass","maxReconnectAttempts":5}]
+
 # env
 LOG_LEVEL=info
 NODE_ENV=development
