Refactor code style and formatting across multiple files
- Updated import statements to use single quotes for consistency.
- Reformatted class properties and methods for improved readability.
- Ensured consistent spacing and indentation throughout the codebase.
- Added missing newlines at the end of files where necessary.
- Improved error messages for clarity in LavalinkApi methods.

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,6 @@
   "trailingComma": "none",
   "tabWidth": 2,
   "bracketSpacing": true,
-  "arrowParens": "avoid"
+  "arrowParens": "avoid",
+  "printWidth": 120
 }
