--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "tsx watch --env-file=.env src/index.ts | pino-pretty",
     "build": "swc src -d dist",
     "start": "node dist/index.js",
-    "format": "prettier --write \"src/**/*.ts\""
+    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "eslint --ext .ts src"
   },
   "devDependencies": {
     "@eslint/js": "^9.26.0",
