fix: update import paths to include file extensions for consistency

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
         "target": "ESNext",
-        "module": "ESNext",
-        "moduleResolution": "node",
+        "module": "NodeNext",
+        "moduleResolution": "NodeNext",
         "baseUrl": ".",
         "paths": {
             "@/*": [
@@ -13,7 +13,7 @@
         "forceConsistentCasingInFileNames": true,
         "strict": true,
         "skipLibCheck": true,
-        "noEmit": true
+        "noEmit": true,
     },
     "include": [
         "src"
