--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "swc src -d dist",
     "start": "node dist/index.js",
     "format": "prettier --write \"src/**/*.ts\"",
-    "lint": "eslint --ext .ts src"
+    "lint": "eslint --ext .ts src",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@eslint/js": "^9.26.0",
@@ -17,6 +18,8 @@
     "@types/ws": "^8.18.1",
     "eslint-plugin-prettier": "^5.3.1",
     "globals": "^16.0.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.1",
     "pino-pretty": "^13.0.0",
     "prettier": "^3.5.3",
     "tsx": "^4.7.0",
@@ -36,5 +39,8 @@
       "@swc/core",
       "esbuild"
     ]
+  },
+  "lint-staged": {
+    "*.ts": "eslint --fix"
   }
 }
