feat: lavalink load tracks

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af",
   "dependencies": {
     "axios": "^1.9.0",
+    "discord-api-types": "^0.38.3",
     "discord.js": "^14.19.3",
     "eslint": "^9.26.0",
     "pino": "^9.6.0",
