--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
   "tabWidth": 2,
   "bracketSpacing": true,
   "arrowParens": "avoid",
-  "printWidth": 100
+  "printWidth": 100,
+  "endOfLine": "lf"
 }
