fix: update preview.yml to include PR number in Docker image tags

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -38,9 +38,9 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
-            type=ref,event=branch
             type=raw,value=canary
             type=sha
+            type=raw,value=pr-${{ github.event.inputs.pr_number }}
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
