refactor: update code style and improve type imports across the project

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,10 +10,16 @@
             ]
         },
         "esModuleInterop": true,
+        "noUncheckedIndexedAccess": true,
+        "noImplicitOverride": true,
+        "isolatedModules": true,
+        "moduleDetection": "force",
+        "verbatimModuleSyntax": true,
         "forceConsistentCasingInFileNames": true,
         "strict": true,
         "skipLibCheck": true,
         "noEmit": true,
+        "lib": ["es2022"]
     },
     "include": [
         "src"
