--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
   "semi": false,
   "singleQuote": true,
-  "trailingComma": "none",
+  "trailingComma": "all",
   "tabWidth": 2,
   "bracketSpacing": true,
   "arrowParens": "avoid",
