feat: add docker-compose configuration for main, canary, lavalink, and watchtower services

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,7 @@ LAVALINK_NODES=[{"name":"Localhost","host":"localhost","port":2333,"password":"y
 # env
 LOG_LEVEL=info
 NODE_ENV=development
+
+# deploy
+DEPLOY_WEBHOOK_TOKEN=your_token_here
+DEPLOY_WEBHOOK_ID=your_id_here
